<resources>
    <string name="app_name">TerminalApp</string>
    <string name="action_settings">Settings</string>
    <string name="menu">MENU</string>
    <string name="network_parameters">Network Parameters</string>
    <string name="timesteps">Timesteps</string>
    <string name="exit">Exit</string>
    <string name="ip">IP address</string>
    <string name="port">Port</string>
    <string name="topic">Topic</string>
    <string name="time">Time in seconds</string>
    <string name="apply">Apply</string>
    <string name="cancel">Cancel</string>
    <string name="connectEdge">Connect To Edge Server</string>
    <string name="csv_file">CSV file</string>
    <string name="initiate">INITIATE</string>
    <string name="send_data">SEND DATA</string>
    <string name="stop_sending">STOP SENDING</string>
    <string name="netReady">OK</string>
    <string name="file_parameters">File Parameters</string>
    <string name="map_display">MAP DISPLAY</string>
    <string name="real_map">SHOWING REAL MAP</string>
    <string name="predicted_map">SHOWING PREDICTED MAP</string>
</resources>
