<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/autodrive"
    tools:context=".ConnectionActivity">

    <Button
        android:id="@+id/connectButton"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:background="@android:color/holo_blue_light"
        android:text="@string/connectEdge"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/sendButton"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:background="@android:color/holo_green_light"
        android:text="@string/send_data"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/connectButton" />

    <Button
        android:id="@+id/stopButton"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:background="@android:color/holo_red_light"
        android:text="@string/stop_sending"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sendButton" />

    <ToggleButton
        android:id="@+id/mapToggleButton"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:background="@android:color/holo_orange_dark"
        android:checked="false"
        android:gravity="center"
        android:text="@string/map_display"
        android:textColor="@android:color/black"
        android:textOff="@string/real_map"
        android:textOn="@string/predicted_map"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stopButton" />

    <fragment
        android:id="@+id/mapReal"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="320dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <fragment
        android:id="@+id/mapPredicted"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="320dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>